--- a/gdut_hospital/html/download_details.html
+++ b/gdut_hospital/html/download_details.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh">
 	<head>
-		<title>交通指南页</title>
+		<title>下载详细页</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="../css/reset.css" type="text/css" media="screen">
 		<link rel="stylesheet" href="../css/global.css" type="text/css" media="screen">
-		<link rel="stylesheet" href="../css/traffic_guide_shop.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="../css/download_details.css" type="text/css" media="screen">
 <!--[if lt IE 9]>
 	<script type="text/javascript" src="js/html5.js"></script>
 	<style type="text/css">
@@ -48,7 +48,7 @@
 						</li>
 						<span class="bar"></span>
 						<li>
-							<a class="current" href="#">&gt就医指南</a>
+							<a href="#">&gt就医指南</a>
 							<ul>
 								<li><a href="">急诊指南</a></li><span>|</span>
 								<li><a href="">普通门诊</a></li><span>|</span>
@@ -80,7 +80,7 @@
 						</li>
 						<span class="bar"></span>
 						<li>
-							<a href="#">&gt交流平台</a>
+							<a class="current" href="#">&gt交流平台</a>
 							<ul>
 								<li><a href="">意见反馈</a></li><span>|</span>
 								<li><a href="">下载专区</a></li>
@@ -94,33 +94,27 @@
 <!-- content -->
 		<div class="content">
 			<div class="title">
-				<h1 class="Chtitle">就医指南</h1>
-				<h4 class="Entitle">Medical Guide</h4>	
+				<h1 class="Chtitle">交流平台</h1>
+				<h4 class="Entitle">Communication Platform</h4>	
 			</div>
 			<div class="wrap">
-				<div class="part">
-					<ul>
-						<a class="first_aid" href="#"><li>急诊指南</li></a>
-						<a class="ordinary" href="#"><li>普通门诊</li></a>
-						<a class="expert" href="#"><li>专家门诊</li></a>
-						<a class="test" href="#"><li>化验检查</li></a>
-						<a class="assistant" href="#"><li>辅助检查</li></a>
-						<a class="traffic part_cur" href="#"><li>交通指南</li></a>
-					</ul>
-				</div>
-				<div class="medical_guide">
-					<div class="cur">当前位置：<a href="#">首页</a> > <a href="#">就医指南</a> > <a href="#">交通指南</a></div>
-					<h2>交通指南</h2>
-					<div class="guide">
+				<div>
+					<div class="part">
 						<ul>
-							<li class="first"></li>
-							<li class="map_guide"><a href="#">地图导航</a></li>
-							<li class="shop"><a href="#">周边商户</a></li>
-							<li class="bus"><a href="#">公交路线</a></li>
-							<li class="last"></li>
+							<a class="feedback" href="#"><li>意见反馈</li></a>
+							<a class="download part_cur" href="#"><li>下载专区</li></a>
 						</ul>
-						<div class="map">
-							<iframe src="../js/testShopMap.html" width="697" height="290"></iframe>
+					</div>
+					<div class="communication">
+						<div class="cur">当前位置：<a href="#">首页</a> > <a href="#">交流平台</a> > <a href="#">下载专区</a> > 详情</div>
+						<h2>下载专区</h2>
+						<div class="details">
+							<h4>医院租赁人员转雇员结果公示</h4>
+							<div class="data">xyy.gdut.edu.cn   2014-2-28    广东工业大学医院</div>
+							<div class="attachment">
+								<h6>附件下载：</h6>
+								<a href="#">公费医疗特殊诊治申请表.doc</a>
+							</div>
 						</div>
 					</div>
 				</div>	
