--- a/gdut_hospital/html/health_edu.html
+++ b/gdut_hospital/html/health_edu.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh">
 	<head>
-		<title>交通指南页</title>
+		<title>健康教育页</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="../css/reset.css" type="text/css" media="screen">
 		<link rel="stylesheet" href="../css/global.css" type="text/css" media="screen">
-		<link rel="stylesheet" href="../css/traffic_guide_shop.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="../css/health_edu.css" type="text/css" media="screen">
 <!--[if lt IE 9]>
 	<script type="text/javascript" src="js/html5.js"></script>
 	<style type="text/css">
@@ -48,7 +48,7 @@
 						</li>
 						<span class="bar"></span>
 						<li>
-							<a class="current" href="#">&gt就医指南</a>
+							<a href="#">&gt就医指南</a>
 							<ul>
 								<li><a href="">急诊指南</a></li><span>|</span>
 								<li><a href="">普通门诊</a></li><span>|</span>
@@ -66,7 +66,7 @@
 						</li>
 						<span class="bar"></span>
 						<li>
-							<a href="#">&gt健康保健</a>
+							<a class="current" href="#">&gt健康保健</a>
 							<ul>
 								<li><a href="">预防保健</a></li><span>|</span>
 								<li><a href="">健康教育</a></li>
@@ -94,33 +94,62 @@
 <!-- content -->
 		<div class="content">
 			<div class="title">
-				<h1 class="Chtitle">就医指南</h1>
-				<h4 class="Entitle">Medical Guide</h4>	
+				<h1 class="Chtitle">健康保健</h1>
+				<h4 class="Entitle">Health Care</h4>	
 			</div>
 			<div class="wrap">
 				<div class="part">
 					<ul>
-						<a class="first_aid" href="#"><li>急诊指南</li></a>
-						<a class="ordinary" href="#"><li>普通门诊</li></a>
-						<a class="expert" href="#"><li>专家门诊</li></a>
-						<a class="test" href="#"><li>化验检查</li></a>
-						<a class="assistant" href="#"><li>辅助检查</li></a>
-						<a class="traffic part_cur" href="#"><li>交通指南</li></a>
+						<a class="prevent" href="#"><li>预防保健</li></a>
+						<a class="health_edu part_cur" href="#"><li>健康教育</li></a>
 					</ul>
 				</div>
-				<div class="medical_guide">
-					<div class="cur">当前位置：<a href="#">首页</a> > <a href="#">就医指南</a> > <a href="#">交通指南</a></div>
-					<h2>交通指南</h2>
-					<div class="guide">
-						<ul>
-							<li class="first"></li>
-							<li class="map_guide"><a href="#">地图导航</a></li>
-							<li class="shop"><a href="#">周边商户</a></li>
-							<li class="bus"><a href="#">公交路线</a></li>
-							<li class="last"></li>
-						</ul>
-						<div class="map">
-							<iframe src="../js/testShopMap.html" width="697" height="290"></iframe>
+				<div class="health_care">
+					<div class="cur">当前位置：<a href="#">首页</a> > <a href="#">健康保健</a> > <a href="#">健康教育</a></div>
+					<h2>预防保健</h2>
+					<div class="list">
+						<div class="essay">
+							<img src="../images/news.jpg">
+							<div class="essay_intro">
+								<h4><a href="#">医院租赁人员转雇员结果公示</a><span class="date">2013-11-28</span></h4>
+								<p>医院现有租赁人员经过专业理论笔试、民主测评、考核小组面试，确定拟聘刘凯旋、陈竻招为雇员人选欢迎个人和单位向医院反映以上干部在德、能、勤、绩、廉等方面的情况和问题，书面反映时提倡签署实名。</p>
+							</div>
+						</div>
+						<div class="essay">
+							<img src="../images/news.jpg">
+							<div class="essay_intro">
+								<h4><a href="#">医院租赁人员转雇员的推荐方法</a><span class="date">2013-11-22</span></h4>
+								<p>一、推荐条件：（1）具有中专及中专以上学历（2）热爱医务工作，在医院工作满2年以上，安心工作且有继续为学校服务的意向。（3）吃苦耐劳，服从组织统一的工作安排。4）有扎实的医学、药学或护理的理论基础，有较强的医学……</p>
+							</div>
+						</div>
+						<div class="essay">
+							<img src="../images/news.jpg">
+							<div class="essay_intro">
+								<h4><a href="#">医院考核小组及评议小组成员名单公示</a><span class="date">2013-9-6</span></h4>
+								<p>医院考核小组成员：黎明、尚娟、王娴贤、罗建明、何洲、朱冬梅、罗绮玉、陈惠娜、何佩珠医院评议小组成员：大学城校园门诊部：王娴贤、罗绮玉、朱冬梅东风路校区门诊部：何  洲、许桂莲、何佩珠龙洞校区门诊部：罗建明、钟丽娴、何敏</p>
+							</div>
+						</div>
+						<div class="essay">
+							<img src="../images/news.jpg">
+							<div class="essay_intro">
+								<h4><a href="#">医院绩效工资改革工作小组名单公示</a><span class="date">2013-7-18</span></h4>
+								<p>医院绩效工资改革工作小组名单林清霞、黎明、尚娟、朱冬梅、王娴贤、何洲、罗建明、陈惠娜、罗绮玉</p>
+							</div>
+						</div>
+						<div class="essay">
+							<img src="../images/news.jpg">
+							<div class="essay_intro">
+								<h4><a href="#">医院租赁人员转雇员的推荐方法</a><span class="date">2013-11-22</span></h4>
+								<p>一、推荐条件：（1）具有中专及中专以上学历（2）热爱医务工作，在医院工作满2年以上，安心工作且有继续为学校服务的意向。（3）吃苦耐劳，服从组织统一的工作安排。4）有扎实的医学、药学或护理的理论基础，有较强的医学……</p>
+							</div>
+						</div>
+						<div class="data">
+							共&nbsp;60&nbsp;条&nbsp;&nbsp;&nbsp;1&nbsp;/&nbsp;20&nbsp;页&nbsp;&nbsp;&nbsp;
+							<a href="#">首页</a>&nbsp;&nbsp;&nbsp;
+							<a href="#">上一页</a>&nbsp;&nbsp;&nbsp;
+							第&nbsp;<span>1</span>&nbsp;页&nbsp;&nbsp;&nbsp;
+							<a href="#">下一页</a>&nbsp;&nbsp;&nbsp;
+							<a href="#">尾页</a>
 						</div>
 					</div>
 				</div>	
@@ -157,6 +186,5 @@
 <!-- / footer -->
 <!-- javascript -->
 		<script type="text/javascript" src="../js/jquery.js"></script>
-		<script src="../js/global.js"></script>
-	</body>
+		<script src="../js/global.js"></script>	</body>
 </html>
