--- a/gdut_hospital/html/prevent.html
+++ b/gdut_hospital/html/prevent.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh">
 	<head>
-		<title>交通指南页</title>
+		<title>预防保健页</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="../css/reset.css" type="text/css" media="screen">
 		<link rel="stylesheet" href="../css/global.css" type="text/css" media="screen">
-		<link rel="stylesheet" href="../css/traffic_guide_shop.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="../css/prevent.css" type="text/css" media="screen">
 <!--[if lt IE 9]>
 	<script type="text/javascript" src="js/html5.js"></script>
 	<style type="text/css">
@@ -48,7 +48,7 @@
 						</li>
 						<span class="bar"></span>
 						<li>
-							<a class="current" href="#">&gt就医指南</a>
+							<a href="#">&gt就医指南</a>
 							<ul>
 								<li><a href="">急诊指南</a></li><span>|</span>
 								<li><a href="">普通门诊</a></li><span>|</span>
@@ -66,7 +66,7 @@
 						</li>
 						<span class="bar"></span>
 						<li>
-							<a href="#">&gt健康保健</a>
+							<a class="current" href="#">&gt健康保健</a>
 							<ul>
 								<li><a href="">预防保健</a></li><span>|</span>
 								<li><a href="">健康教育</a></li>
@@ -94,33 +94,47 @@
 <!-- content -->
 		<div class="content">
 			<div class="title">
-				<h1 class="Chtitle">就医指南</h1>
-				<h4 class="Entitle">Medical Guide</h4>	
+				<h1 class="Chtitle">健康保健</h1>
+				<h4 class="Entitle">Health Care</h4>	
 			</div>
 			<div class="wrap">
 				<div class="part">
 					<ul>
-						<a class="first_aid" href="#"><li>急诊指南</li></a>
-						<a class="ordinary" href="#"><li>普通门诊</li></a>
-						<a class="expert" href="#"><li>专家门诊</li></a>
-						<a class="test" href="#"><li>化验检查</li></a>
-						<a class="assistant" href="#"><li>辅助检查</li></a>
-						<a class="traffic part_cur" href="#"><li>交通指南</li></a>
+						<a class="prevent part_cur" href="#"><li>预防保健</li></a>
+						<a class="health_edu" href="#"><li>健康教育</li></a>
 					</ul>
 				</div>
-				<div class="medical_guide">
-					<div class="cur">当前位置：<a href="#">首页</a> > <a href="#">就医指南</a> > <a href="#">交通指南</a></div>
-					<h2>交通指南</h2>
-					<div class="guide">
-						<ul>
-							<li class="first"></li>
-							<li class="map_guide"><a href="#">地图导航</a></li>
-							<li class="shop"><a href="#">周边商户</a></li>
-							<li class="bus"><a href="#">公交路线</a></li>
-							<li class="last"></li>
-						</ul>
-						<div class="map">
-							<iframe src="../js/testShopMap.html" width="697" height="290"></iframe>
+				<div class="health_care">
+					<div class="cur">当前位置：<a href="#">首页</a> > <a href="#">健康保健</a> > <a href="#">预防保健</a></div>
+					<h2>预防保健</h2>
+					<div class="list">
+						<div class="prevent_intro">
+							<h4><a href="#">获取医保知识及了解医保问题的途径</a><span class="date">2013-11-28</span></h4>
+							<p>教工公费医疗管理制度 根据国家、省有关文件规定，实行干部职工个人自负一定比例的医药费，同时发放医贴的办法。一、 报销比例 (一)在职教工：校内门诊报销85%；个人自负15%；校外门诊报销80%，个人自负20%；院报销94%，个人自负6%；校外住院报销90%，个人自负10%……</p>
+						</div>
+						<div class="prevent_intro">
+							<h4><a href="#">大中专学校困难学生参加城镇居民基本医疗保险有关事项</a><span class="date">2013-11-28</span></h4>
+							<p>广东工业大学学生参加城镇居民医保普通门(急)诊医疗管理暂行办法 根据《广州市城镇居民基本医疗保险试法》（穗府办[2008]22号）和《关于调整<广州市城镇居民基本医疗保险试行办法>有关规定的通知》（穗劳社[20号）精神，我校学生已纳入城镇居民基本医疗保险，并选用……</p>
+						</div>
+						<div class="prevent_intro">
+							<h4><a href="#">我校学生普通门诊专项基金的来源</a><span class="date">2013-11-28</span></h4>
+							<p>转诊制度及选定医疗机构（一）转诊制度：原则上我校教工、参保学生患病须先到校医院就诊（急诊除外），经校医院医生处理，由于条件所限或病情所需应转到大医院诊疗的，由接诊医生开具转诊单，转诊到校外门诊选疗机构就诊，所产生的医疗费用按规定比例报销……</p>
+						</div>
+						<div class="prevent_intro">
+							<h4><a href="#">参保学生哪些医疗费用可以报销?报销限额是多少?</a><span class="date">2013-11-28</span></h4>
+							<p>广东工业大学学生参加城镇居民医保普通门(急)诊医疗管理暂行办法 根据《广州市城镇居民基本医疗保险试法》（穗府办[2008]22号）和《关于调整<广州市城镇居民基本医疗保险试行办法>有关规定的通知》（穗劳社[20号）精神，我校学生已纳入城镇居民基本医疗保险，并选用……</p>
+						</div>
+						<div class="prevent_intro">
+							<h4><a href="#">广州市医保局在大学城设有医保服务专窗</a><span class="date">2013-11-28</span></h4>
+							<p>转诊制度及选定医疗机构（一）转诊制度：原则上我校教工、参保学生患病须先到校医院就诊（急诊除外），经校医院医生处理，由于条件所限或病情所需应转到大医院诊疗的，由接诊医生开具转诊单，转诊到校外门诊选疗机构就诊，所产生的医疗费用按规定比例报销……</p>
+						</div>
+						<div class="data">
+						共&nbsp;60&nbsp;条&nbsp;&nbsp;&nbsp;1&nbsp;/&nbsp;20&nbsp;页&nbsp;&nbsp;&nbsp;
+						<a href="#">首页</a>&nbsp;&nbsp;&nbsp;
+						<a href="#">上一页</a>&nbsp;&nbsp;&nbsp;
+						第&nbsp;<span>1</span>&nbsp;页&nbsp;&nbsp;&nbsp;
+						<a href="#">下一页</a>&nbsp;&nbsp;&nbsp;
+						<a href="#">尾页</a>
 						</div>
 					</div>
 				</div>	
