--- a/gdut_hospital/html/download.html
+++ b/gdut_hospital/html/download.html
@@ -4,7 +4,7 @@
 		<title>下载专区页</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="../css/reset.css" type="text/css" media="screen">
-		<link rel="stylesheet" href="../css/globle.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="../css/global.css" type="text/css" media="screen">
 		<link rel="stylesheet" href="../css/download.css" type="text/css" media="screen">
 <!--[if lt IE 9]>
 	<script type="text/javascript" src="js/html5.js"></script>
@@ -19,83 +19,131 @@
 <![endif]-->
 	</head>
 	<body id="page1">
-		<div class="main">
 <!-- header -->
-		<div id="header">
-			<a href="index.html" id="logo"><img src="../images/headPhoto.png"></a>
-			<ul id="navMenu">
-				<span class="bar"></span>
-				<li><a href="index.html">&gt医院主页</a></li>
-				<span class="bar"></span>
-				<li><a href="">&gt医院概况</a>
-					<ul>
-						<li><a href="">医院简介</a></li><span>|</span>
-						<li><a href="">专家介绍</a></li><span>|</span>
-						<li><a href="">医护人员</a></li><span>|</span>
-						<li><a href="">规章制度</a></li>
+		<div class="header">
+			<a href="index.html" id="logo"><img src="../images/head.jpg"></a>
+			<div class="bg_wrap">
+				<div class="nav_wrap">
+					<ul class="nav_menu">
+						<span class="bar"></span>
+						<li>
+							<a href="index.html">&gt医院主页</a>
+							<ul>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li><a href="">&gt医院概况</a>
+							<ul>
+								<li><a href="">医院简介</a></li><span>|</span>
+								<li><a href="">专家介绍</a></li><span>|</span>
+								<li><a href="">医护人员</a></li><span>|</span>
+								<li><a href="">规章制度</a></li>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt医院新闻</a>
+							<ul>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt就医指南</a>
+							<ul>
+								<li><a href="">急诊指南</a></li><span>|</span>
+								<li><a href="">普通门诊</a></li><span>|</span>
+								<li><a href="">专家门诊</a></li><span>|</span>
+								<li><a href="">化验检查</a></li><span>|</span>
+								<li><a href="">辅助检查</a></li><span>|</span>
+								<li><a href="">交通指南</a></li>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt科室介绍</a>
+							<ul>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt健康保健</a>
+							<ul>
+								<li><a href="">预防保健</a></li><span>|</span>
+								<li><a href="">健康教育</a></li>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt公费医疗</a>
+							<ul>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a class="current" href="#">&gt交流平台</a>
+							<ul>
+								<li><a href="">意见反馈</a></li><span>|</span>
+								<li><a href="">下载专区</a></li>
+							</ul>
+						</li>
+						<span class="bar"></span>
 					</ul>
-				</li>
-				<span class="bar"></span>
-				<li><a href="#">&gt医院新闻</a></li>
-				<span class="bar"></span>
-				<li><a href="#">&gt就医指南</a></li>
-				<span class="bar"></span>
-				<li><a href="#">&gt科室介绍</a></li>
-				<span class="bar"></span>
-				<li><a href="#">&gt健康保健</a></li>
-				<span class="bar"></span>
-				<li><a href="#">&gt公费医疗</a></li>
-				<span class="bar"></span>
-				<li><a href="#" class="current">&gt交流平台</a></li>
-				<span class="bar"></span>
-			</ul>
+				</div>
+			</div>
 		</div>
-
-	<!-- <div id="showPic">
-		<img src="images/p1.jpg">
-		<img src="images/p2.jpg">
-		<img src="images/p3.jpg">
-		<img src="images/p4.jpg">
-		<img src="images/p5.jpg" class="currentPic">
-	</div><ul id="picPot">
-			<li class="currentPot">1</li>
-			<li>2</li>
-			<li>3</li>
-			<li>4</li>
-			<li>5</li>
-		</ul> -->
-<!-- / header -->
 <!-- content -->
 		<div class="content">
-			<div class="titlebg">
-				<h1 class="title">交流平台</h1>
+			<div class="title">
+				<h1 class="Chtitle">交流平台</h1>
 				<h4 class="Entitle">Communication Platform</h4>	
 			</div>
 			<div class="wrap">
-				<div>
-					<div class="part">
-						<ul>
-							<a class="feedback" href="#"><li>意见反馈</li></a>
-							<a class="download" href="#"><li>下载专区</li></a>
-						</ul>
-					</div>
-					<div class="intro">
-						<div class="cur">当前位置：<a href="#">首页</a> > <a href="#">交流平台</a> > <a href="#">下载专区</a></div>
-						<div class="list">
-							<h2>下载专区</h2>
-							<ul>
-								<li><a href="#">公费医疗特殊诊治申请表 </a><span class="date">[02-28]</span></li>
-								<li><a href="#">教工异地就医申请表 2014 </a><span class="date">[02-28]</span></li>
-								<li><a href="#">关于申请恢复入学资格/复学的体检通知</a><span class="date">[02-26]</span></li>
-								<li><a href="#">广东工业大学广州市内非指定医院就医申请</a><span class="date">[02-25]</span></li>
-							</ul>
+				<div class="part">
+					<ul>
+						<a class="feedback" href="#"><li>意见反馈</li></a>
+						<a class="download part_cur" href="#"><li>下载专区</li></a>
+					</ul>
+				</div>
+				<div class="communication">
+					<div class="cur">当前位置：<a href="#">首页</a> > <a href="#">交流平台</a> > <a href="#">下载专区</a></div>
+					<h2>下载专区</h2>
+					<div class="list">
+						<div class="intro">
+							<img src="../images/news.jpg">
+							<h4><a href="#">公费医疗特殊诊治申请表</a><span class="date">[02-28]</span></h4>
+						</div>
+						<div class="intro">
+							<img src="../images/news.jpg">
+							<h4><a href="#">教工异地就医申请表 2014 </a><span class="date">[02-28]</span></h4>
+						</div>
+						<div class="intro">
+							<img src="../images/news.jpg">
+							<h4><a href="#">关于申请恢复入学资格/复学的体检通知</a><span class="date">[02-26]</span></h4>
+						</div>
+						<div class="intro">
+							<img src="../images/news.jpg">
+							<h4><a href="#">广东工业大学广州市内非指定医院就医申请</a><span class="date">[02-25]</span></h4>
+						</div>
+						<div class="intro">
+							<img src="../images/news.jpg">
+							<h4><a href="#">转诊制度及选定医疗机构</a><span class="date">2013-11-28</span></h4>
+						</div>
+						<div class="data">
+						共&nbsp;60&nbsp;条&nbsp;&nbsp;&nbsp;1&nbsp;/&nbsp;20&nbsp;页&nbsp;&nbsp;&nbsp;
+						<a href="#">首页</a>&nbsp;&nbsp;&nbsp;
+						<a href="#">上一页</a>&nbsp;&nbsp;&nbsp;
+						第&nbsp;<span>1</span>&nbsp;页&nbsp;&nbsp;&nbsp;
+						<a href="#">下一页</a>&nbsp;&nbsp;&nbsp;
+						<a href="#">尾页</a>
 						</div>
 					</div>
 				</div>	
 			</div>	
+		</div>
 <!-- Links -->
-			<div class="normalBlock" id="links">
-				<div class="titleBg">
+		<div class="nav_block friends_link">
+			<div class="links_wrap">
+				<div class="titlebg">
 					<h2>友情链接</h2>
 				</div>
 				<ul>
@@ -106,16 +154,10 @@
 					<li>	<a href="#">广东省专业资格考试中心</a>	</li>
 				</ul>
 			</div>
-<!--  -->
-
 		</div>
-
-
-<!-- / content -->
-	
-
+<!--  -->
 <!-- footer -->
-		<div id="footer" >
+		<div class="footer" >
 			<ul>
 				<li><a href="">设为首页</a>		<span>|</span>	</li>
 				<li><a href="">加入收藏</a>		<span>|</span>	</li>
@@ -127,17 +169,8 @@
 			<p>Copyright&nbsp©&nbsp2003-2014&nbsp&nbsp广东工业大学医院&nbsp&nbsp版权所有</p>
 		</div>
 <!-- / footer -->
-		</div>
 <!-- javascript -->
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<!-- 
-	<script type="text/javascript">
-		$(function(){
-			var picChil = $('#showPic').find("img");
-			console.log(picChil[0]);
-				picChil.fadeOut(500);
-		});
-	</script> 
--->
+		<script type="text/javascript" src="../js/jquery.js"></script>
+		<script src="../js/global.js"></script>
 	</body>
 </html>
