--- a/gdut_hospital/html/expert.html
+++ b/gdut_hospital/html/expert.html
@@ -4,7 +4,7 @@
 		<title>专家门诊页</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="../css/reset.css" type="text/css" media="screen">
-		<link rel="stylesheet" href="../css/globle.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="../css/global.css" type="text/css" media="screen">
 		<link rel="stylesheet" href="../css/expert.css" type="text/css" media="screen">
 <!--[if lt IE 9]>
 	<script type="text/javascript" src="js/html5.js"></script>
@@ -19,92 +19,117 @@
 <![endif]-->
 	</head>
 	<body id="page1">
-		<div class="main">
-<!-- header -->
-		<div id="header">
-			<a href="index.html" id="logo"><img src="../images/headPhoto.png"></a>
-			<ul id="navMenu">
-				<span class="bar"></span>
-				<li><a href="index.html">&gt医院主页</a></li>
-				<span class="bar"></span>
-				<li><a href="">&gt医院概况</a>
-					<ul>
-						<li><a href="">医院简介</a></li><span>|</span>
-						<li><a href="">专家介绍</a></li><span>|</span>
-						<li><a href="">医护人员</a></li><span>|</span>
-						<li><a href="">规章制度</a></li>
+<!-- header --><div class="header">
+			<a href="index.html" id="logo"><img src="../images/head.jpg"></a>
+			<div class="bg_wrap">
+				<div class="nav_wrap">
+					<ul class="nav_menu">
+						<span class="bar"></span>
+						<li>
+							<a href="index.html">&gt医院主页</a>
+							<ul>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li><a href="">&gt医院概况</a>
+							<ul>
+								<li><a href="">医院简介</a></li><span>|</span>
+								<li><a href="">专家介绍</a></li><span>|</span>
+								<li><a href="">医护人员</a></li><span>|</span>
+								<li><a href="">规章制度</a></li>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt医院新闻</a>
+							<ul>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a class="current" href="#">&gt就医指南</a>
+							<ul>
+								<li><a href="">急诊指南</a></li><span>|</span>
+								<li><a href="">普通门诊</a></li><span>|</span>
+								<li><a href="">专家门诊</a></li><span>|</span>
+								<li><a href="">化验检查</a></li><span>|</span>
+								<li><a href="">辅助检查</a></li><span>|</span>
+								<li><a href="">交通指南</a></li>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt科室介绍</a>
+							<ul>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt健康保健</a>
+							<ul>
+								<li><a href="">预防保健</a></li><span>|</span>
+								<li><a href="">健康教育</a></li>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt公费医疗</a>
+							<ul>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt交流平台</a>
+							<ul>
+								<li><a href="">意见反馈</a></li><span>|</span>
+								<li><a href="">下载专区</a></li>
+							</ul>
+						</li>
+						<span class="bar"></span>
 					</ul>
-				</li>
-				<span class="bar"></span>
-				<li><a href="#">&gt医院新闻</a></li>
-				<span class="bar"></span>
-				<li><a href="#" class="current">&gt就医指南</a></li>
-				<span class="bar"></span>
-				<li><a href="#">&gt科室介绍</a></li>
-				<span class="bar"></span>
-				<li><a href="#">&gt健康保健</a></li>
-				<span class="bar"></span>
-				<li><a href="#">&gt公费医疗</a></li>
-				<span class="bar"></span>
-				<li><a href="#">&gt交流平台</a></li>
-				<span class="bar"></span>
-			</ul>
+				</div>
+			</div>
 		</div>
-
-	<!-- <div id="showPic">
-		<img src="images/p1.jpg">
-		<img src="images/p2.jpg">
-		<img src="images/p3.jpg">
-		<img src="images/p4.jpg">
-		<img src="images/p5.jpg" class="currentPic">
-	</div><ul id="picPot">
-			<li class="currentPot">1</li>
-			<li>2</li>
-			<li>3</li>
-			<li>4</li>
-			<li>5</li>
-		</ul> -->
-<!-- / header -->
 <!-- content -->
 		<div class="content">
-			<div class="titlebg">
-				<h1 class="title">就医指南</h1>
+			<div class="title">
+				<h1 class="Chtitle">就医指南</h1>
 				<h4 class="Entitle">Medical Guide</h4>	
 			</div>
 			<div class="wrap">
-				<div>
-					<div class="part">
-						<ul>
-							<a class="first_aid" href="#"><li>急诊指南</li></a>
-							<a class="ordinary" href="#"><li>普通门诊</li></a>
-							<a class="expert" href="#"><li>专家门诊</li></a>
-							<a class="test" href="#"><li>化验检查</li></a>
-							<a class="assistant" href="#"><li>辅助检查</li></a>
-							<a class="traffic" href="#"><li>交通指南</li></a>
-						</ul>
+				<div class="part">
+					<ul>
+						<a class="first_aid" href="#"><li>急诊指南</li></a>
+						<a class="ordinary" href="#"><li>普通门诊</li></a>
+						<a class="expert part_cur" href="#"><li>专家门诊</li></a>
+						<a class="test" href="#"><li>化验检查</li></a>
+						<a class="assistant" href="#"><li>辅助检查</li></a>
+						<a class="traffic" href="#"><li>交通指南</li></a>
+					</ul>
+				</div>
+				<div class="medical_guide">
+					<div class="cur">当前位置：<a href="#">首页</a> > <a href="#">就医指南</a> > <a href="#">专家门诊</a></div>
+					<h2>专家门诊</h2>
+					<div class="essay">
+						<h4>东风路校区：</h4>
+						<p>心血管专家门诊：逢周一上午开诊；</p>
+						<p>聂贵园专家门诊：逢周一至五上午开诊；</p>
+						<p>眼耳鼻喉科专家门诊：逢周二、四开诊。</p>
+						<p>中医科专家门诊：逢周一、三、五开诊；</p>
+						<h4>大学城校区：</h4>
+						<p>眼耳鼻喉科专家门诊：逢周一上午、周三全天、周五上午开诊。</p>
+						<p>中医科专家门诊：逢周二、四开诊；</p>
+						<p>心理咨询专家门诊：因医生参加24小时门诊值班，具体见门诊部排班表；</p>
+						<h4>龙洞校区：</h4>
+						<p>彭永强专家门诊：逢周一至五开诊</p>
 					</div>
-					<div class="medical_guide">
-						<div class="cur">当前位置：<a href="#">首页</a> > <a href="#">就医指南</a> > <a href="#">专家门诊</a></div>
-						<div class="essay">
-							<h2>专家门诊</h2>
-							<h3>东风路校区：</h3>
-							<p>心血管专家门诊：逢周一上午开诊；</p>
-							<p>聂贵园专家门诊：逢周一至五上午开诊；</p>
-							<p>眼耳鼻喉科专家门诊：逢周二、四开诊。</p>
-							<p>中医科专家门诊：逢周一、三、五开诊；</p>
-							<h3>大学城校区：</h3>
-							<p>眼耳鼻喉科专家门诊：逢周一上午、周三全天、周五上午开诊。</p>
-							<p>中医科专家门诊：逢周二、四开诊；</p>
-							<p>心理咨询专家门诊：因医生参加24小时门诊值班，具体见门诊部排班表；</p>
-							<h3>龙洞校区：</h3>
-							<p>彭永强专家门诊：逢周一至五开诊</p>
-						</div>
-					</div>
-				</div>	
+				</div>
 			</div>	
+		</div>
 <!-- Links -->
-			<div class="normalBlock" id="links">
-				<div class="titleBg">
+		<div class="nav_block friends_link">
+			<div class="links_wrap">
+				<div class="titlebg">
 					<h2>友情链接</h2>
 				</div>
 				<ul>
@@ -115,16 +140,10 @@
 					<li>	<a href="#">广东省专业资格考试中心</a>	</li>
 				</ul>
 			</div>
-<!--  -->
-
 		</div>
-
-
-<!-- / content -->
-	
-
+<!--  -->
 <!-- footer -->
-		<div id="footer" >
+		<div class="footer" >
 			<ul>
 				<li><a href="">设为首页</a>		<span>|</span>	</li>
 				<li><a href="">加入收藏</a>		<span>|</span>	</li>
@@ -136,17 +155,8 @@
 			<p>Copyright&nbsp©&nbsp2003-2014&nbsp&nbsp广东工业大学医院&nbsp&nbsp版权所有</p>
 		</div>
 <!-- / footer -->
-		</div>
 <!-- javascript -->
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<!-- 
-	<script type="text/javascript">
-		$(function(){
-			var picChil = $('#showPic').find("img");
-			console.log(picChil[0]);
-				picChil.fadeOut(500);
-		});
-	</script> 
--->
+		<script type="text/javascript" src="../js/jquery.js"></script>
+		<script src="../js/global.js"></script>
 	</body>
 </html>
