--- a/gdut_hospital/html/feedback.html
+++ b/gdut_hospital/html/feedback.html
@@ -4,7 +4,7 @@
 		<title>意见反馈页</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="../css/reset.css" type="text/css" media="screen">
-		<link rel="stylesheet" href="../css/globle.css" type="text/css" media="screen">
+		<link rel="stylesheet" href="../css/global.css" type="text/css" media="screen">
 		<link rel="stylesheet" href="../css/feedback.css" type="text/css" media="screen">
 <!--[if lt IE 9]>
 	<script type="text/javascript" src="js/html5.js"></script>
@@ -19,101 +19,173 @@
 <![endif]-->
 	</head>
 	<body id="page1">
-		<div class="main">
 <!-- header -->
-		<div id="header">
-			<a href="index.html" id="logo"><img src="../images/headPhoto.png"></a>
-			<ul id="navMenu">
-				<span class="bar"></span>
-				<li><a href="index.html">&gt医院主页</a></li>
-				<span class="bar"></span>
-				<li><a href="">&gt医院概况</a>
-					<ul>
-						<li><a href="">医院简介</a></li><span>|</span>
-						<li><a href="">专家介绍</a></li><span>|</span>
-						<li><a href="">医护人员</a></li><span>|</span>
-						<li><a href="">规章制度</a></li>
+		<div class="header">
+			<a href="index.html" id="logo"><img src="../images/head.jpg"></a>
+			<div class="bg_wrap">
+				<div class="nav_wrap">
+					<ul class="nav_menu">
+						<span class="bar"></span>
+						<li>
+							<a href="index.html">&gt医院主页</a>
+							<ul>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li><a href="">&gt医院概况</a>
+							<ul>
+								<li><a href="">医院简介</a></li><span>|</span>
+								<li><a href="">专家介绍</a></li><span>|</span>
+								<li><a href="">医护人员</a></li><span>|</span>
+								<li><a href="">规章制度</a></li>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt医院新闻</a>
+							<ul>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt就医指南</a>
+							<ul>
+								<li><a href="">急诊指南</a></li><span>|</span>
+								<li><a href="">普通门诊</a></li><span>|</span>
+								<li><a href="">专家门诊</a></li><span>|</span>
+								<li><a href="">化验检查</a></li><span>|</span>
+								<li><a href="">辅助检查</a></li><span>|</span>
+								<li><a href="">交通指南</a></li>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt科室介绍</a>
+							<ul>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt健康保健</a>
+							<ul>
+								<li><a href="">医院院院简介</a></li><span>|</span>
+								<li><a href="">专家介绍</a></li><span>|</span>
+								<li><a href="">医护人员员员</a></li>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a href="#">&gt公费医疗</a>
+							<ul>
+							</ul>
+						</li>
+						<span class="bar"></span>
+						<li>
+							<a class="current" href="#">&gt交流平台</a>
+							<ul>
+								<li><a href="">意见反馈</a></li><span>|</span>
+								<li><a href="">下载专区</a></li>
+							</ul>
+						</li>
+						<span class="bar"></span>
 					</ul>
-				</li>
-				<span class="bar"></span>
-				<li><a href="#">&gt医院新闻</a></li>
-				<span class="bar"></span>
-				<li><a href="#">&gt就医指南</a></li>
-				<span class="bar"></span>
-				<li><a href="#">&gt科室介绍</a></li>
-				<span class="bar"></span>
-				<li><a href="#">&gt健康保健</a></li>
-				<span class="bar"></span>
-				<li><a href="#">&gt公费医疗</a></li>
-				<span class="bar"></span>
-				<li><a href="#" class="current">&gt交流平台</a></li>
-				<span class="bar"></span>
-			</ul>
+				</div>
+			</div>
 		</div>
-
-	<!-- <div id="showPic">
-		<img src="images/p1.jpg">
-		<img src="images/p2.jpg">
-		<img src="images/p3.jpg">
-		<img src="images/p4.jpg">
-		<img src="images/p5.jpg" class="currentPic">
-	</div><ul id="picPot">
-			<li class="currentPot">1</li>
-			<li>2</li>
-			<li>3</li>
-			<li>4</li>
-			<li>5</li>
-		</ul> -->
-<!-- / header -->
 <!-- content -->
 		<div class="content">
-			<div class="titlebg">
-				<h1 class="title">交流平台</h1>
+			<div class="title">
+				<h1 class="Chtitle">交流平台</h1>
 				<h4 class="Entitle">Communication Platform</h4>	
 			</div>
 			<div class="wrap">
-				<div>
+				<div class="clear">
 					<div class="part">
 						<ul>
-							<a class="feedback" href="#"><li>意见反馈</li></a>
+							<a class="feedback part_cur" href="#"><li>意见反馈</li></a>
 							<a class="download" href="#"><li>下载专区</li></a>
 						</ul>
 					</div>
-					<div class="intro">
-						<div class="cur">当前位置：<a href="#">首页</a> > <a href="#">交流平台</a> > <a href="#">意见反馈</a></div>
-						<div class="list">
+					<div class="communication">
+						<div class="block">
+							<div class="cur">当前位置：<a href="#">首页</a> > <a href="#">交流平台</a> > <a href="#">意见反馈</a></div>
 							<h2>意见反馈</h2>
-							<ul>
-								<li><a href="#">[医疗] 关于艾滋病检测</a><span class="status">[已回复]</span></li>
-								<li><a href="#">[其他] 健康证</a><span class="status">[已回复]</span></li>
-								<li><a href="#">[医疗] 牙齿</a><span class="status">[已回复]</span></li>
-								<li><a href="#">[医疗] 住院要开转诊单吗？</a><span class="status">[已回复]</span></li>
-								<li><a href="#">[医疗] 住院要开转诊单吗？</a><span class="status">[已回复]</span></li>
-								<li><a href="#">[医疗] 转诊单没有校医院的公章，只有医生和转诊医院的公章能报销吗？</a><span class="status">[已回复]</span></li>
-								<li><a href="#">[其他] 复检结果</a><span class="status">[已回复]</span></li>
-								<li><a href="#">[医疗] 关于艾滋病检测</a><span class="status">[已回复]</span></li>
-								<li><a href="#">[其他] 健康证</a><span class="status">[已回复]</span></li>
-								<li><a href="#">[医疗] 牙齿</a><span class="status">[已回复]</span></li>
-								<li><a href="#">[医疗] 住院要开转诊单吗？</a><span class="status">[已回复]</span></li>
-								<li><a href="#">[医疗] 住院要开转诊单吗？</a><span class="status">[已回复]</span></li>
-								<li><a href="#">[医疗] 转诊单没有校医院的公章，只有医生和转诊医院的公章能报销吗？</a><span class="status">[已回复]</span></li>
-								<li><a href="#">[其他] 复检结果</a><span class="status">[已回复]</span></li>
-							</ul>
-							<div class="data">
-							共&nbsp;60&nbsp;条&nbsp;&nbsp;&nbsp;1&nbsp;/&nbsp;20&nbsp;页&nbsp;&nbsp;&nbsp;
-							<a href="#">首页</a>&nbsp;&nbsp;&nbsp;
-							<a href="#">上一页</a>&nbsp;&nbsp;&nbsp;
-							第&nbsp;<span>1</span>&nbsp;页&nbsp;&nbsp;&nbsp;
-							<a href="#">下一页</a>&nbsp;&nbsp;&nbsp;
-							<a href="#">尾页</a>
+							<div class="list">
+								<div class="intro">
+									<h4><a href="#">[医疗] 关于艾滋病检测</a><span class="status">[已回复]</span></h4>
+									<p>[姓名]：陈增铭</p>
+									<p>[时间]：2014-5-15 23:23:08</p>
+									<p>[内容]：我想问一下，我们大学城校区的校医院有艾滋病的检测吗？</p>
+								</div>
+								<div class="intro">
+									<h4><a href="#">[其他] 健康证 2014 </a><span class="status">[已回复]</span></h4>
+									<p>[姓名]：陈增铭</p>
+									<p>[时间]：2014-5-15 23:23:08</p>
+									<p>[内容]：我想问一下，我们大学城校区的校医院有艾滋病的检测吗？</p>
+								</div>
+								<div class="intro">
+									<h4><a href="#">[医疗] 牙齿</a><span class="status">[已回复]</span></h4>
+									<p>[姓名]：陈增铭</p>
+									<p>[时间]：2014-5-15 23:23:08</p>
+									<p>[内容]：我想问一下，我们大学城校区的校医院有艾滋病的检测吗？</p>
+								</div>
+								<div class="intro">
+									<h4><a href="#">[医疗] 住院要开转诊单吗？</a><span class="status">[已回复]</span></h4>
+									<p>[姓名]：陈增铭</p>
+									<p>[时间]：2014-5-15 23:23:08</p>
+									<p>[内容]：我想问一下，我们大学城校区的校医院有艾滋病的检测吗？</p>
+								</div>
+								<div class="intro">
+									<h4><a href="#">[医疗] 住院要开转诊单吗？</a><span class="status">[已回复]</span></h4>
+									<p>[姓名]：陈增铭</p>
+									<p>[时间]：2014-5-15 23:23:08</p>
+									<p>[内容]：我想问一下，我们大学城校区的校医院有艾滋病的检测吗？</p>
+								</div>
+								<div class="data">
+								共&nbsp;60&nbsp;条&nbsp;&nbsp;&nbsp;1&nbsp;/&nbsp;20&nbsp;页&nbsp;&nbsp;&nbsp;
+								<a href="#">首页</a>&nbsp;&nbsp;&nbsp;
+								<a href="#">上一页</a>&nbsp;&nbsp;&nbsp;
+								第&nbsp;<span>1</span>&nbsp;页&nbsp;&nbsp;&nbsp;
+								<a href="#">下一页</a>&nbsp;&nbsp;&nbsp;
+								<a href="#">尾页</a>
+								</div>
+							</div>
 						</div>
+						<div class="commit">
+							<form>
+								<div>
+									<span class="need">*</span><span class="kind">分类 : </span>
+									<select>
+										<option>其他分类</option>
+										<option>医技</option>
+										<option>挂号收费</option>
+										<option>护理</option>
+										<option>医疗</option>
+									</select>
+								</div>
+								<div>
+									<span class="need">*</span><span class="kind">姓名 : </span><input class="name">
+								</div>
+								<div>
+									<span class="need"> </span><span class="kind">邮箱 : </span><input class="email">
+								</div>
+								<div>
+									<span class="need">*</span><span class="kind">主题 : </span><input class="theme">
+								</div>
+								<div>
+									<span class="need">*</span><span class="kind">内容 : </span><textarea></textarea>
+								</div>
+								<button class="button">意见提交</button>
+							</form>
 						</div>
 					</div>
 				</div>	
 			</div>	
+		</div>
 <!-- Links -->
-			<div class="normalBlock" id="links">
-				<div class="titleBg">
+		<div class="nav_block friends_link">
+			<div class="links_wrap">
+				<div class="titlebg">
 					<h2>友情链接</h2>
 				</div>
 				<ul>
@@ -124,16 +196,10 @@
 					<li>	<a href="#">广东省专业资格考试中心</a>	</li>
 				</ul>
 			</div>
-<!--  -->
-
 		</div>
-
-
-<!-- / content -->
-	
-
+<!--  -->
 <!-- footer -->
-		<div id="footer" >
+		<div class="footer" >
 			<ul>
 				<li><a href="">设为首页</a>		<span>|</span>	</li>
 				<li><a href="">加入收藏</a>		<span>|</span>	</li>
@@ -145,17 +211,8 @@
 			<p>Copyright&nbsp©&nbsp2003-2014&nbsp&nbsp广东工业大学医院&nbsp&nbsp版权所有</p>
 		</div>
 <!-- / footer -->
-		</div>
 <!-- javascript -->
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<!-- 
-	<script type="text/javascript">
-		$(function(){
-			var picChil = $('#showPic').find("img");
-			console.log(picChil[0]);
-				picChil.fadeOut(500);
-		});
-	</script> 
--->
+		<script type="text/javascript" src="../js/jquery.js"></script>
+		<script src="../js/global.js"></script>
 	</body>
 </html>
